# this_code_is_made_by_copilot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: auth.py  config.py  crud.py  database.py  main.py  models.py  routes.py  schemas.py
tests/: test_api.py
